# qr_content_list

./: .gitignore  Cargo.toml  data.json
src/: handler.rs  main.rs  qr_generator.rs
src/handler/: data.rs
static/: doc.html  doc.md  footer.html  form.html  header.html  home_header.html  index.html  not_found.html  qr_list_uses.html  test.html
static/css/: doc.css  footer.css  form.css  header.css  home.css  list.css  not_found.css  qr_list.css  qr_list_uses.css  show.css  style.css
static/script/: form.js
