[package]
name = "qr_content_list"
version = "0.3.2"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
log = "0.4.22"
env_logger = "0.11.5"
actix-files = "0.6.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
qrcode = "0.14.1"
image = { version = "0.25.2", features = ["bmp"] }
chrono = "0.4.38"